# k2-backbone

./: .gitignore  .gitmodules  INTEGRATIONS.md  README.md  SETUP.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.obliviarch/archetypal/: general_general.json
.obliviarch/semantic/: general.json
docs/: architecture.md  automon-comparison.md  neuroswarm-comparison.md  nexys-comparison.md
executions/: col_2dc7d594.json  col_7f4ef302.json  col_cb7d150c.json  dep_061fc477.json  dep_15a7673e.json  dep_d457509e.json  plan_2b4dcf67.json  plan_6c1adf64.json  plan_d34ff450.json
k2_backbone/analysts/: __init__.py  analyst_base.py  citation_agent.py  devils_advocate.py  dynamic_decomposition.py  effort_scaling.py  fundamental_analyst.py  interleaved_thinking.py  lead_analyst.py  orchestrator.py  quant_analyst.py  risk_analyst.py  sector_specialist.py  self_improving.py  synthesis_editor.py  technical_analyst.py
k2_backbone/audit/: agent_identity_adapter.py
k2_backbone/bridge/: automon_bridge.py
k2_backbone/browser/: browser_automation_adapter.py
k2_backbone/core/: cli.py  cli_v2.py  interfaces.py  k2-task-spec.schema.json
k2_backbone/decomposer/: k2_decomposer.py
k2_backbone/discovery/: scoutforge_adapter.py
k2_backbone/executor/: neuroswarm_executor.py  neuroswarm_integration.py  neuroswarm_integration_v2.py  openclaw_dispatcher.py
k2_backbone/memory/: obliviarch_adapter.py
k2_backbone/router/: __init__.py  necroswarm_router.py  necroswarm_router_v2.py
k2_backbone/social/: x_interact_adapter.py
k2_backbone/workflow/: namespace_adapter.py
plugins/openclaw-k2-backbone/: README.md  openclaw.plugin.json  package-lock.json  package.json
plugins/openclaw-k2-backbone/handlers/: decompose.mjs  execute.mjs
plugins/openclaw-k2-backbone/src/: index.test.ts  index.ts
plugins/ruflo-k2-backbone/: README.md  package.json
plugins/ruflo-k2-backbone/src/: index.ts
routing/model_routing_table/: table.py
scripts/: init-submodules.sh  model-scanner.py
skills/k2-backbone-v2/: SKILL.md
src/k2_backbone/bridge/: automon_bridge.py
src/k2_backbone/core/: cli.py  cli_v2.py
src/k2_backbone/decomposer/: k2_decomposer.py
src/k2_backbone/executor/: openclaw_bridge.py  (+1 more)
src/memory/: memory_evolution_adapter.py
src/namespaces/: openclaw_namespace_adapter.py
src/optimization/: sentientforge_adapter.py
src/orchestrator/: swarm_orchestrator.py
src/router/: necroswarm_router.py  necroswarm_router_v2.py
src/skills/: __init__.py  chat_router.py  integration.py  progressive_loader.py
tests/unit/: test_chat_router.py  test_skills_integration.py
(+8 files in other folders)
