[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k2-backbone"
version = "0.2.0"
description = "Kimi K2.6's Production Backbone — with Progressive Loading and Recursive Retrieval"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "openclaw-recursive-retrieval>=0.1.0",  # Recursive context retrieval
    "progressive-loading>=0.1.0",            # Progressive skill loading
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "k2-backbone[dev]",
]

[project.scripts]
k2 = "k2_backbone.core.cli:main"
k2-v2 = "k2_backbone.core.cli_v2:main"

[project.urls]
Homepage = "https://github.com/0x-wzw/k2-backbone"
Documentation = "https://github.com/0x-wzw/k2-backbone/tree/main/docs"
Repository = "https://github.com/0x-wzw/k2-backbone"

[tool.hatch.build.targets.wheel]
packages = ["src/k2_backbone"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
